# nbt-sniper

./: .gitignore  Cargo.toml  LICENSE  README.md  output.json
gui-test/gui-nbtsniper/: Cargo.toml  Dioxus.toml
gui-test/gui-nbtsniper/src/: main.rs
src/: lib.rs  main.rs
src/fmt/: mod.rs
src/nbt/: mod.rs  tests.rs
src/nbt/fsm/: mod.rs
src/nbt/fsm/parse/: mod.rs
src/region/: mod.rs
src/world/: mod.rs
tests/: integration_tests.rs  region_tests.rs  world_tests.rs
tests/files/: bigtest.nbt  r.-1.0.mca
