[package]
name = "nbtsniper"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "read, write and inspect all kind of NBT files"
repository = "https://github.com/mrmarkolinus/nbt-sniper"
readme = "README.md"


[dependencies]
byteorder = "1.3"
flate2 = "1.0.34"
thiserror = "1.0.64"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.130"
log = "0.4.22"
env_logger = "0.11.5"